--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ html,
 body,
 #root,
 .app,
+.protected,
 .content {
   height: 100%;
   width: 100%;
@@ -11,6 +12,11 @@ body,
 }
 
 .app {
+  display: flex;
+  position: relative;
+}
+
+.protected {
   display: flex;
   position: relative;
 }
